add image links to Libraries server

--- a/pages/ff142.md
+++ b/pages/ff142.md
@@ -8,9 +8,9 @@ external_manifest_url:
 ---
 <!-- Add an essay or interpretive material below this line,
 using HTML or markdown.  Do not modify this file above this line -->
-<p style="text-align:center"><img src="https://www.jmu.edu/_images/furiousflower/furious-flower-logo.jpg"></p>
+<p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/furious-flower-logo.jpg"></p>
 <hr>
-<p style="text-align:center"><img src="https://api.poets.org/sites/default/files/styles/poem_a_day_portrait/public/images/biographies/YusefKomunyakaa_NewBioImage.jpg?itok=LWv9d5hi"></p>
+<p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/yusef_komunyakaa.jpg"></p>
 <h1 style="text-align:center">Yusef Komunyakaa</h1>
 <hr>
 
