add image links to Libraries server

--- a/pages/ff143.md
+++ b/pages/ff143.md
@@ -8,9 +8,9 @@ external_manifest_url:
 ---
 <!-- Add an essay or interpretive material below this line,
 using HTML or markdown.  Do not modify this file above this line -->
-<p style="text-align:center"><img src="https://www.jmu.edu/_images/furiousflower/furious-flower-logo.jpg"></p>
+<p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/furious-flower-logo.jpg"></p>
 <hr>
-<p style="text-align:center"><img src="https://furiousflower.org/wp-content/uploads/2019/03/sonia-sanchez3.jpg"></p>
+<p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/sonia_sanchez.jpg"></p>
 <h1 style="text-align:center">Sonia Sanchez</h1>
 <p>Sonia Sanchez is a poet, playwright, educator, storyteller, womanist, and revolutionary. She has a voice that bridges generations. She was instrumental in the Black Arts Movement of the ‘60s and ‘70s, and has continued to publish impactful, widely influential works of poetry ever since. She has visited hundreds of colleges and universities to teach and spread her poetry and philosophy, and traveled to many countries to read with the same mission. As she notes concerning a poet's role, ”above all what we do is try to keep us human.”<a href="#fn1"><sup>[1]</sup></a></p>
 <p>In her long and prolific career, Sanchez has reforged poetic forms such as the haiku and tanka to better fit her calls of and for radical love. She has bridged the gap between personal and political art forms, blurring the line between self-discovery, political activism, and spiritual teaching. Dr. Joanne Gabbin has referred to Sonia Sanchez’s message as “one of redeeming realism” and “gemlike intensity”.<a href="#fn2"><sup>[2]</sup></a></p>
