add image links to Libraries server

--- a/pages/ff146.md
+++ b/pages/ff146.md
@@ -8,9 +8,9 @@ external_manifest_url:
 ---
 <!-- Add an essay or interpretive material below this line,
 using HTML or markdown.  Do not modify this file above this line -->
-<p style="text-align:center"><img src="https://www.jmu.edu/_images/furiousflower/furious-flower-logo.jpg"></p>
+<p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/furious-flower-logo.jpg"></p>
 <hr>
-<p style="text-align:center"><img src="https://www.sampsoniaway.org/wp-content/uploads/2014/08/Kwame.png"></p>
+<p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/kwame_dawes.png"></p>
 <h1 style="text-align:center">Kwame Dawes</h1>
 <p>Kwame Dawes is a prolific poet, teacher, editor, documentarian, and organizer that works closely with local communities. He has published twenty books of poetry to date, including <i>Progeny of Air</i>, <i>Gomer’s Song</i>, and <i>Duppy Conqueror: New and Selected Poems</i>. He has also received several awards for his work, including the Pushcart Prize for his poem, <i>Inheritance</i>, and an Emmy for a website based on his project <i>HOPE: Living and Loving with AIDS in Jamaica</i>.</p>
 <p>Born in Ghana, and spending most of his childhood in Jamaica, Dawes works at the intersection of the various facets of his identity, calling on his memory of the various places he calls home. As he notes, "I have always lived with this sense of being inside and outside of various worlds… at once, inside and yet still able to look from outside inside."<a href="#fn1"><sup>[1]</sup></a> In his wide panoply of work, Dawes weaves themes of nature, community, counter-narrative, Reggae, memory, and dreams together in his rich landscapes, portraits, and stories.</p>
