--- a/pages/ff148.md
+++ b/pages/ff148.md
@@ -9,9 +9,9 @@ external_manifest_url:
 <!-- Add an essay or interpretive material below this line,
 using HTML or markdown.  Do not modify this file above this line -->
   
-  <p style="text-align:center"><img src="https://www.jmu.edu/_images/furiousflower/furious-flower-logo.jpg"></p>
+  <p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/furious-flower-logo.jpg"></p>
   <hr>
-  <p style="text-align:center"><img src="https://furiousflower.org/wp-content/uploads/2019/04/osbey-profile.png"></p>
+  <p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/brenda_osbey.png"></p>
   <h1 style="text-align:center">Brenda Marie Osbey</h1>
  <p>Brenda Marie Osbey is a poet, literary theorist, translator, and historiographer who has published several books of poems, including <i>Desperate Circumstance, Dangerous Woman</i>, <i>History and Other Poems</i>, and <i>All Souls: Essential Poems</i>. Her work has been published in numerous journals, including <i>Callaloo</i>, <i>Southern Review</i>, and <i>2PLUS2</i>. Alongside many critics, she has emphasized the deep relationship her work and thought have to history, especially as it is manifested in New Orleans. As Thadious Davis notes in her book <i>Southscapes– Geographies of Race, Region, and Literature</i>, “&#91;Osbey’s&#93; selective knowledge of a past is part of the cultural logic of her New Orleans as an architectonic space. Historical memory for her is a way to get at the structures of the past.”<a href="#fn1"><sup>[1]</sup></a> Living among the vibrant fragments of centuries-old traditions, Osbey collects and distills the voices of the dead embedded in location and legacy.</p>
 <p>In her first book, <i> Ceremony for Minneconjoux</i>, Osbey explores themes of seduction, "madness" as a form of resistance, and "how the legacy of strength and endurance is transmitted among [women]"<a href="#fn2"><sup>[2]</sup></a>. Osbey disrupts conventional poetic forms in order to break with the false history designed by white settlers. In <i> History and Other Poems</i>, she grapples with the violence committed by Christoper Columbus and Diogo cão, among other colonial agents. Juxtaposing historical accounts with contemporary lyrics and company slogans, Osbey reveals the long shadow that the Transatlantic Slave Trade has cast.</p>
