add image links to Libraries server

--- a/pages/ff149.md
+++ b/pages/ff149.md
@@ -8,9 +8,9 @@ external_manifest_url:
 ---
 <!-- Add an essay or interpretive material below this line,
 using HTML or markdown.  Do not modify this file above this line -->
-<p style="text-align:center"><img src="https://www.jmu.edu/_images/furiousflower/furious-flower-logo.jpg"></p>
+<p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/furious-flower-logo.jpg"></p>
 <hr>
-<p style="text-align:center"><img src="https://furiousflower.org/wp-content/uploads/2019/04/17400EOS1d_9.24.04_178.jpg"></p>
+<p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/askia_toure.jpg"></p>
 <h1 style="text-align:center">Askia Touré</h1>
 <p>Askia M. Touré is a poet, essayist, and editor who was one of the architects of the Black Arts Movement. As an editor for several influential publications, such as <i>Liberator Magazine</i>, and <i>The Journal of Black Poetry</i>, Touré helped shape the powerful voices of Black resistance and aesthetic theory of the 1960s and ‘70s. He was a member of the SNCC and the RAM, and paved the way for one of the first Africana Studies programs in the country during his time at San Francisco State University.</p>
 <p>Touré has published several poetry collections, including <i>Songhai</i>, <i>From the Pyramids to the Projects: Poems of Genocide & Resistance!</i>, which won the American Book Award for Literature, and <i>Dawnsong!</i>, which won the Stephen E. Henderson Poetry Award. Touré also received the Gwendolyn Brooks Lifetime Achievement Award.</p>
