add image links to Libraries server

--- a/pages/ff152.md
+++ b/pages/ff152.md
@@ -8,9 +8,9 @@ external_manifest_url:
 ---
 <!-- Add an essay or interpretive material below this line,
 using HTML or markdown.  Do not modify this file above this line -->
-<p style="text-align:center"><img src="https://www.jmu.edu/_images/furiousflower/furious-flower-logo.jpg"></p>
+<p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/furious-flower-logo.jpg"></p>
 <hr>
-<p style="text-align:center"><img src="https://furiousflower.org/wp-content/uploads/2019/03/elizabeth-alexander3.jpg"></p>
+<p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/elizabeth_alexander.jpg"></p>
 <h1 style="text-align:center">Elizabeth Alexander</h1>
 <p>Elizabeth Alexander is a renowned poet, essayist, educator, feminist, and cultural advocate. She has published several books of poetry, including <i>The Venus Hottentot</i>, <i>Body of Life</i>, and <i>American Sublime</i>, which was a finalist for the Pulitzer prize in 2005. Dr. Alexander read “Praise Song for the Day” at the inauguration of President Barack Obama in 2009. Her memoir, <i>The Light of the World</i>, was a finalist for the Pulitzer prize in 2015. She has taught at Columbia and Yale University, and currently serves as the President of the Andrew W. Mellon Foundation. Her poetry covers a wide range of themes, including meditations on popular culture, deep explorations of personal experience, reconstructions of dream sequences, and historical reclaimations.</p>
 <p>In works such as <i>The Venus Hottentot</i>, she recovers the undertold histories and silenced voices of the past, and delves into the gaps and silences of the archive. As she notes, “The historian laments caesuras in the historical record; the artist can offer deeply informed imagining that, while not empirically verifiable, offers one of the only routes we may have to imagine a past whose records have not been kept precious.”<a href="#fn1"><sup>[1]</sup></a> 
