add image links to Libraries server

--- a/pages/ff153.md
+++ b/pages/ff153.md
@@ -9,7 +9,7 @@ external_manifest_url:
 <!-- Add an essay or interpretive material below this line,
 using HTML or markdown.  Do not modify this file above this line -->
 
-<p style="text-align:center"><img src="https://www.jmu.edu/_images/furiousflower/furious-flower-logo.jpg"></p>
+<p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/furious-flower-logo.jpg"></p>
 <hr>
 <h3>Preferred Citation:</h3>
 <i>Joanne V. Gabbin Interview, 9/24/2004 (FF153)</i>. Transcribed and edited by Evan Sizemore, 2021-2022, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made by WVPT to document the second Furious Flower Poetry Center decennial meeting, September 23-25, 2004. Part of the Furious Flower Poetry Center Conference Records, 1970-2015, UA 0018, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF153. Collection finding aid: <a href="https://aspace.lib.jmu.edu/repositories/4/resources/487">https://aspace.lib.jmu.edu/repositories/4/resources/487</a>.
