add image links for Hill, Moore and Sanchez

--- a/pages/ff010.md
+++ b/pages/ff010.md
@@ -13,6 +13,15 @@ using HTML or markdown.  Do not modify this file above this line -->
 <p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/joanne_gabbin.jpg"></p>
 <h1 style="text-align:center">Joanne V. Gabbin</h1>
 <hr>
+<p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/damaris_hill.jpg"></p>
+<h1 style="text-align:center">DaMaris B. Hill</h1>
+<hr>
+<p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/opal_moore.jpg"></p>
+<h1 style="text-align:center">Opal Moore</h1>
+<hr>
+<p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/sonia_sanchez.jpg"></p>
+<h1 style="text-align:center">Sonia Sanchez</h1>
+<hr>
 <h3>Preferred Citation:</h3> 
 <i>Furious Flower Poetry Center Overview Part 1, 6/20/2011 (FF010)</i>. Transcribed and edited by Evan Sizemore, 2021-2022, part of the Mellon-funded AudiAnnotate Audiovisual Extensible Workflow Project. Based on video recordings made to document the Furious Flower Poetry Center events outside of the decennial meetings. Part of the Furious Flower Poetry Center Records, 1990-2019, UA 0017, Special Collections, Carrier Library, James Madison University Libraries, Harrisonburg, Virginia, media file FF010. Collection finding aid: <a href="https://aspace.lib.jmu.edu/repositories/4/resources/488">https://aspace.lib.jmu.edu/repositories/4/resources/488</a>.
 <hr>
