--- a/pages/ff149.md
+++ b/pages/ff149.md
@@ -11,7 +11,7 @@ using HTML or markdown.  Do not modify this file above this line -->
 <p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/furious-flower-logo.jpg"></p>
 <hr>
 <p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/askia_toure.jpg"></p>
-<h1 style="text-align:center">Askia Touré</h1>
+<h1 style="text-align:center">Askia M. Touré</h1>
 <p>Askia M. Touré is a poet, essayist, and editor who was one of the architects of the Black Arts Movement. As an editor for several influential publications, such as <i>Liberator Magazine</i>, and <i>The Journal of Black Poetry</i>, Touré helped shape the powerful voices of Black resistance and aesthetic theory of the 1960s and ‘70s. He was a member of the SNCC and the RAM, and paved the way for one of the first Africana Studies programs in the country during his time at San Francisco State University.</p>
 <p>Touré has published several poetry collections, including <i>Songhai</i>, <i>From the Pyramids to the Projects: Poems of Genocide & Resistance!</i>, which won the American Book Award for Literature, and <i>Dawnsong!</i>, which won the Stephen E. Henderson Poetry Award. Touré also received the Gwendolyn Brooks Lifetime Achievement Award.</p>
 <p>Touré’s work connects African history and mythology to the lived experience of Black Americans. The voices of ancestrality work through his vivid depictions of African Gods and Goddesses, tracing their survival into the present day, and helping their teachings and deep wisdom live on. As Lorenzo Thomas notes in his book <i>Extraordinary Measures: Afrocentric Modernism and Twentieth-Century American Poetry</i>, "Touré was an opener of directions and new fields of thought. African American popular culture, as a vital expression of ancient traditions, was unselfconsciously admitted to his poems."<a href="#fn1"><sup>[1]</sup></a></p> 
