--- a/pages/ff136.md
+++ b/pages/ff136.md
@@ -12,7 +12,7 @@ using HTML or markdown.  Do not modify this file above this line -->
 <p style="text-align:center"><img src="https://apps.lib.jmu.edu/audiannotate/images/houston_baker.jpg"></p>
 <h1 style="text-align:center">Houston A. Baker, Jr.</h1>
 <hr>
-<p>Houston Baker is a literary and cultural theorist, poet, historian, and educator who has worked to integrate theories of black aesthetics and modernism into the white exclusionary and racist spaces of academia. Through his work in literary criticism in the 1970s and ‘80s, Baker has helped to redefine modernism, placing the Harlem Renaissance at its core, and has given theories of vernacular and oral cultural production due importance and authority. As Richard J. Lane notes of Baker, "in interrogating and mapping the black aesthetic, Baker has taught critics new ways of reading literature in general".<a href="#fn1"><sup>[1]</sup></a></p>
+<p>Houston A. Baker Jr. is a literary and cultural theorist, poet, historian, and educator who has worked to integrate theories of black aesthetics and modernism into the white exclusionary and racist spaces of academia. Through his work in literary criticism in the 1970s and ‘80s, Baker has helped to redefine modernism, placing the Harlem Renaissance at its core, and has given theories of vernacular and oral cultural production due importance and authority. As Richard J. Lane notes of Baker, "in interrogating and mapping the black aesthetic, Baker has taught critics new ways of reading literature in general".<a href="#fn1"><sup>[1]</sup></a></p>
 <p>Among Baker’s published works are his <i>Black Literature in America</i>, one of the first comprehensive anthologies of Black writers, <i>Modernism and the Harlem Renaissance</i>, and <i>Betrayal: How Black Intellectuals have Abandoned the Ideals of the Civil Rights Era</i>, which received an American Book Award. His poetry collections include <i>No Matter Where You Travel, You Still Be Black</i> and <i>Passing Over</i>. He was the first African American to serve as the president of the Modern Language Association, and is currently the Distinguished University Professor of English at Vanderbilt University.</p>
 <p>Baker’s collection <i>No Matter Where you Travel, You Still be Black</i> carries the themes of wandering, dislocation, and search through his condensed portraits and landscapes. The numerous dedications make his first book of poems a deeply personal meditation on literary and scholarly solidarity, friendship, and love. His later collection, <i>Passing Over</i>, explores the power of poetry to help confront and mend trauma through the vibrant music and healing silences of nature. As Toi Derricotte notes in her review of the collection, "Charting a journey through despair and back to love, Houston Baker proves the grace of poetry."
 <a href="#fn2"><sup>[2]</sup></a><hr>
