--- a/pages/ff148.md
+++ b/pages/ff148.md
@@ -18,8 +18,8 @@ using HTML or markdown.  Do not modify this file above this line -->
 <p>According to the critic Laura Vrana, the themes of Osbey’s poems, as well as the experimental forms which she uses in storytelling, draw from the forms of the <i>griot</i> oral tradition.<a href="#fn3"><sup>[3]</sup></a> Working with the past as a presence embedded in historical location, she also explores the way the dead can speak to the living, and the enduring links between their realms. In her American Book Award winning collection, <i>All Saints</i>, she blends tradition, myth, and legend into a deep reverence for and celebration of the dead.</p>
 <p>Osbey's historical narrative poems have been influenced by Robert Hayden, Gayl Jones, and Sherley Anne Williams, among others.</p>
 <hr/>
-  <p>In this interview with Carmen Gillespie, Osbey discusses the omnipresence of history, the process of reclaiming images through her poetry, the profound ways in which Black Americans have transformed and redefined colonial languages through artistic tradition, expression, and resistance, as well as the beauty, complexity, and unique temporality of New Orleanian culture.
-  <p><a href="https://cavecanempoets.org/poetstour/carmen-gillespie">Carmen Gillespie</a>, a critic, poet, and educator, received her Bachelor's degree and Master's from JMU-- where she studied with Dr. Joanne Gabbin, the founder of the Furious Flower Poetry Center. She received her Ph.D in Comparative Literature from Emory University, and continued to become a professor of English and the director and founder of the Griot Institute for Africana Studies at Bucknell University. She published three award-winning books of poetry, critical collections on Alice Walker and Toni Morrison, and received several prestigious fellowships for her writing.</p>
+  <p>In this interview with Carmen R. Gillespie, Osbey discusses the omnipresence of history, the process of reclaiming images through her poetry, the profound ways in which Black Americans have transformed and redefined colonial languages through artistic tradition, expression, and resistance, as well as the beauty, complexity, and unique temporality of New Orleanian culture.
+  <p><a href="https://cavecanempoets.org/poetstour/carmen-gillespie">Carmen R. Gillespie</a>, a critic, poet, and educator, received her Bachelor's degree and Master's from JMU-- where she studied with Dr. Joanne Gabbin, the founder of the Furious Flower Poetry Center. She received her Ph.D in Comparative Literature from Emory University, and continued to become a professor of English and the director and founder of the Griot Institute for Africana Studies at Bucknell University. She published three award-winning books of poetry, critical collections on Alice Walker and Toni Morrison, and received several prestigious fellowships for her writing.</p>
 <hr>
 <h3>More Information:</h3>
 <b>Interviews:</b>
